# sponsorbook

./: .gitignore  README.md  WithLogger.py  app.py  dependencies.py  models.py  organizations.py  pyproject.toml  storage.py  sub_organizations.py  test_integration.py
database_utils/: gen_mongo_id.py
dependencies/: __init__.py  infrastructure.py
domain/: algorithms.py  auth.py  models.py  repository.py
infrastructure/: CategoryCollectionRepository.py  CollectionRepository.py  ContactCollectionRepository.py  ConversationCollectionRepository.py  EventCollectionRepository.py  OrgRepositoryCollection.py  SponsorCollectionRepository.py  SubOrgCollectionRepository.py  TicketCollectionRepository.py  UserCollectionRepository.py  __init__.py  algorithms.py  repositories.py  repositories_base.py
models/: authentication_models.py  base.py  category_models.py  contact_models.py  conversation_models.py  errors.py  event_models.py  organization_models.py  session.py  sponsor_models.py  sub_organization_models.py  ticket.py  ticket_models.py  user_models.py
mongo/: docker-compose.yml  run-this-once.sh
routers/: authentication.py  categories.py  contacts.py  conversations.py  events.py  imports.py  organizations.py  sponsors.py  sub_organizations.py  tickets.py  users.py
storage/: CategoryCollectionRepository.py  CollectionRepository.py  ContactCollectionRepository.py  ConversationCollectionRepository.py  EventCollectionRepository.py  OrgRepositoryCollection.py  SponsorCollectionRepository.py  SubOrgCollectionRepository.py  TicketCollectionRepository.py  UserCollectionRepository.py  __init__.py
templates/: home_page.html  login_page.html
tests/: defaults.py  (+7 more)
(+47 files in other folders)
