[tool.poetry]
name = "sponsorbook"
version = "0.1.0"
description = ""
authors = ["edsinkevic <sinkevicedwin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
pymongo = "^4.3.3"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"